[package]
name = "mcmodloader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
ureq = "1.1.1"
colored = "2.0.0"
ansi_term = "0.12.1"
reqwest = "0.11.7"
tokio = { version = "1", features = ["full"] }
